home page - responsive

--- a/index.html
+++ b/index.html
@@ -147,5 +147,69 @@
         <img src="/Images/2.png" alt="Careers icon" />
       </div>
     </section>
+
+    <!--Industries-->
+    <section class="industries">
+      <h2 class="md text-center my-2">
+        Select your industry. Discover our impact
+      </h2>
+      <div class="container flex">
+        <div class="card">
+          <h4>Banking</h4>
+          <img src="Images/Banking.webp" alt="Banking Sector" />
+        </div>
+        <div class="card">
+          <h4>Capital Market</h4>
+          <img src="Images/capi.avif" alt="Capital Market" />
+        </div>
+        <div class="card">
+          <h4>Insurance</h4>
+          <img src="Images/insurance.avif" alt="Insurance" />
+        </div>
+        <div class="card">
+          <h4>Healtcare &#38; Pharma</h4>
+          <img src="Images/HC.webp" alt="Healthcare" />
+        </div>
+        <div class="card">
+          <h4>Telecommunication</h4>
+          <img src="Images/telcom.jpg" alt="Telecom" />
+        </div>
+        <div class="card">
+          <h4>Manufacturing</h4>
+          <img src="Images/manu.webp" alt="Manufacturing and Retail" />
+        </div>
+        <div class="card">
+          <h4>Travel and Logistics</h4>
+          <img src="Images/log.avif" alt="Travel and Logistics" />
+        </div>
+        <div class="card">
+          <h4>Energy, Oil &#38; Gas</h4>
+          <img src="Images/energy.avif" alt="Solar Energy" />
+        </div>
+      </div>
+    </section>
+
+    <!--Footer-->
+    <footer class="footer bg-dark py-5">
+      <div class="container grid grid-3">
+        <div>
+          <h1>Bloxcode</h1>
+          <p>Copyright &copy; 2024</p>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="service.html">Services</a></li>
+            <li><a href="careers.html">Careers</a></li>
+          </ul>
+        </nav>
+        <div class="social">
+          <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
+          <a href=""><i class="fab fa-twitter fa-2x"></i></a>
+          <a href=""><i class="fab fa-facebook fa-2x"></i></a>
+          <a href=""><i class="fab fa-instagram fa-2x"></i></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
