--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       name="keywords"
       content="IT services, Software development, Web development, Cybersecurity, Cloud solutions, IT consulting, Managed services, Digital transformation, Technology solutions, Business innovation"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -20,6 +21,7 @@
     />
     <link rel="stylesheet" href="/Styles/style.css" />
     <link rel="stylesheet" href="/Styles/utilities.css" />
+    <link rel="stylesheet" href="Styles/career.css" />
     <title>
       Bloxcode: Your Trusted IT Service Partner for Innovative Solutions
     </title>
